--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                             <p style="text-align: justify">C'est un accompagnement en 3 temps : pratique de la marche nordique, groupe de parole, relaxation mentale.</p>
                             <br/>
                             <p style="text-align: justify"><b><u>Objectif:</u> prévention santé, maintien du lien social, rencontre et parole.</b></p>
-                            <p style="text-align: justify">La marche nordique est un sport complet aux multiples bienfaits pour le corps et l'esprit. Accessibles à tous les niveaux sportifs. </p>
+                            <p style="text-align: justify">La marche nordique est un sport complet aux multiples bienfaits pour le corps et l'esprit. Activité en plein air et accessible à tous les niveaux sportifs. Fédère les participants dans une démarche groupale.</p>
 
                             <p style="text-align: justify">Le groupe de parole ou l'analyse des pratiques professionnelles permet une prise de distance, une remobilisation du processus créatif et fédére. </p>
                             <p style="text-align: justify">La relaxation mentale permet le relâchement et la détente en profondeur. </p>
