--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                                 <p>
                                     <span>2ème samedi du mois :</span>
                                     <br/><br/>
-                                    <a href="https://goo.gl/maps/UeBM8P6xAEKEZdof8" target="_blank">Parc de l'Orangerie (pavillon Joséphine) <br/>à Strasbourg</a>
+                                    <a href="https://goo.gl/maps/UeBM8P6xAEKEZdof8" target="_blank">Parc de l'Orangerie <br/>(pavillon Joséphine) <br/>à Strasbourg</a>
                                 </p>
                             </div>
                             <div style="display: table-cell; padding: 10px; margin: 5px; width: 100%; border: 1px solid rgb(170, 170, 170); background-color: rgb(230, 230, 230);">
