Fix location Sauer Munschausen

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                                 <p>
                                     <span>4ème samedi du mois :</span>
                                     <br/><br/>
-                                    <a href="https://goo.gl/maps/5J9hCaicTqwza7ANA" target="_blank">Parc naturel de la Sauer Munschausen <br/>(région Lauterbourg-Wissembourg) <br/> <br/>(RDV au Parking à côté du Centre d'initiation à la Nature)</a>
+                                    <a href="https://goo.gl/maps/5J9hCaicTqwza7ANA" target="_blank">Parc naturel de la Sauer Munschausen <br/>(région Lauterbourg-Wissembourg) <br/> <br/>(RDV au parking à droite du Centre d'initiation à la Nature)</a>
                                 </p>
                             </div>
                         </div>
