--- a/index.html
+++ b/index.html
@@ -453,6 +453,7 @@
                                 <li>Sac à dos avec :</li>
                                 <ul>
                                     <li>Bouteille d'eau,</li>
+                                    <li>Anti-moustiques,</li>
                                     <li>Goûter sucré,</li>
                                     <li>Serviette (pour s'allonger),</li>
                                     <li>Stylo.</li>
