Add COVID instructions

--- a/index.html
+++ b/index.html
@@ -464,6 +464,8 @@
                             <p><b>20 €/pers</b> pour 2h/2h30 d'accompagnement.</p>
                             <p>Maximum 10 personnes.</p>
 
+                            <br/>
+                            <b>En raison des règles sanitaires actuelles, respectons les 1,50m de distance entre chaque participants pendant l'activité.</b>
                         </div>
                     </div>
 
