--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     Ré-Unir est un espace neutre de parole destiné aux particuliers (entretien individuel), aux
                     familles (entretiens familiaux) et aux professionnels issus des domaines social, médico-social,
                     sanitaire, scolaire et du monde de l’entreprise (Analyse des pratiques professionnelles,
-                    supervision et régulation d’équipe).
+                    supervision et régulation d’équipe). Ré-Unir propose également une activité innovante : la psychamarche.
                 </p>
             </div>
         </div>
@@ -139,7 +139,7 @@
                 <p>Actuellement, je termine un Diplôme Universitaire en Médecine et je suis membre de la Fédération Européenne De Psychanalyse de Strasbourg (FEDEPSY).</p>
                 <p>Je suis salariée à 80 % dans une école spécialisée auprès d'adolescents de 12 à 18 ans en Allemagne et je termine un Brevet Fédéral en Marche Nordique.
                 <br/>
-                Ainsi, j'ai une longue expérience professionnelle auprès d'enfants (0-10), d'adolescents (10-21) et adultes en difficultés sociale, familiale, scolaire et/ou psychique. </p>
+                Ainsi, j'ai une longue expérience professionnelle auprès d'enfants (0-10), d'adolescents (10-21) et adultes en difficultés sociales, familiales, scolaires et/ou psychiques. </p>
 
                 <p>D'une nature passionnée et engagée, j'ai choisi de devenir une psychanalyste pour être au plus près de la parole et de ses effets. Étre là et tenter d'accompagner au mieux les singularités humaines. Je suis dialectophone et bilingue.</p>
                 <p>Dans un processus de formation continue, je cherche toujours à être au plus juste et à la page des problématiques actuelles. </p>
@@ -160,7 +160,7 @@
 
             <div class="services-par">
                 <p>
-                    Ré-Unir offre des services destinées aux particuliers comme aux professionnels.
+                    Ré-Unir offre des services destinés aux particuliers comme aux professionnels.
                 </p>
             </div>
 
