--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     Ré-Unir est un espace neutre de parole destiné aux particuliers (entretien individuel), aux
                     familles (entretiens familiaux) et aux professionnels issus des domaines social, médico-social,
                     sanitaire, scolaire et du monde de l’entreprise (Analyse des pratiques professionnelles,
-                    supervision et régulation d’équipe). Ré-Unir propose également une activité innovante : la psychamarche.
+                    supervision et régulation d’équipe). Ré-Unir propose également une activité innovante : la Psychamarche.
                 </p>
             </div>
         </div>
