Remove justify text

--- a/index.html
+++ b/index.html
@@ -234,25 +234,25 @@
                             </div>
 
                             <div class="collapse" id="particuliers-details-gui_parents">
-                                <p style="text-align: justify">
+                                <p>
                                     Soutenir, accompagner et valoriser les parents tout en apportant une écoute et des conseils pour améliorer ensemble les relations familiales.
                                 </p>
-                                <p style="text-align: justify">
+                                <p>
                                     Traiter les conflits familiaux naissants d'une problématique de comportement, de compréhension, de gestion d'émotions, de conduite à risques, de mal être.
                                 </p>
-                                <p style="text-align: justify">
+                                <p>
                                     En qualité d'ancienne éducatrice spécialisée en France, j'ai des expériences dans l'accompagnement des familles, des adolescents en difficultés sociales, familiales et/ou pénales.
                                 </p>
-                                <p style="text-align: justify">
-                                    En Allemagne, j'ai accompagné des enfants de 0 à 6 ans en jardin d'enfants bilingue et de 11 à 16 ans en école privée spécialisée.
+                                <p>
+                                    En Allemagne, j'ai accompagné des enfants de 0 à 6 ans en jardin d'enfants bilingue et des adolescents de 11 à 18 ans en école privée spécialisée.
                                 </p>
-                                <p style="text-align: justify">
+                                <p>
                                     En qualité de psychanalyste, j'ai développé l'écoute et la clinique.
                                 </p>
-                                <p style="text-align: justify">
+                                <p>
                                     S'autoriser à exprimer ses difficultés et demander une aide  permet d'obtenir le regard extérieur d'un professionnel pour trouver ensemble des solutions.
                                 </p>
-                                <p style="text-align: justify">
+                                <p>
                                     Je propose une prévention éducative dans le but de soutenir la parentalité et une écoute analytique pour tenter d'apaiser les tensions.
                                 </p>
                             </div>
@@ -333,7 +333,7 @@
 
                 <div class="card card-tiny text-center card-pros">
                     <div class="card-header">
-                        <h5>Analyse pratique</h5>
+                        <h5>Analyse des pratiques professionnelles</h5>
                         <br>
                     </div>
                     <div class="card-body">
