Update Séances Psychamarche

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                             <p>Maximum 10 personnes.</p>
 
                             <br/>
-                            <b>En raison des règles sanitaires actuelles, respectons les 1,50m de distance entre chaque participants pendant l'activité.</b>
+                            <b>En raison des règles sanitaires actuelles, nous respecterons ensemble les 1,50m de distance entre chaque participants pendant l'activité.</b>
                         </div>
                     </div>
 
@@ -474,7 +474,8 @@
 
                     <div style="padding: 20px; padding-bottom: 0;">
                         <b>Particuliers :</b>
-                        <p>Les mercredis de 17h30 à 20h au <a href="https://goo.gl/maps/121r67dBtCKPdDh49" target="_blank">Gros Chêne de Haguenau</a>.</p>
+                        <p>Les mercredis de 17h30 à 20h au <a href="https://goo.gl/maps/121r67dBtCKPdDh49" target="_blank">Gros Chêne de Haguenau</a> ou à Roeschwoog en période hivernale.</p>
+                        <p>Plus d'informations sur les séances à venir sont disponibles sur <a href="https://www.facebook.com/re.unirpro67" target="_blank">la page Facebook de Ré-Unir</a>.</p>
                         <br/>
                         
                         <b>Entreprises, services ou institutions :</b>
