--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
                     <p>Ré-Unir est un espace de parole destiné aux particuliers (entretien individuel), aux familles
                     (entretiens familiaux) et aux professionnels issus des domaines social, médico-social, sanitaire,
                     scolaire et du monde de l’entreprise (Analyse des pratiques professionnelles, supervision et
-                    régulation d’équipe). Je suis une psychanalyste, membre d'une Fédération, superviseuse certifiée et une ancienne éducatrice spécialisée D.E.</p>
+                    régulation d’équipe). Je suis une psychanalyste, membre d'une Fédération, superviseuse certifiée et une éducatrice spécialisée D.E.</p>
                     <p>Etant bilingue, j'ai choisi de m'installer à Roeschwoog, village proche de la frontière.</p>
                 </div>
                 <div class="col-md-2"></div>
