--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                 <h3 style="padding-top: 10px; color: white;">Ré-Unir : Pour qui ? Pour quoi ?</h3>
 
                 <p>
-                    Il nous arrive à toutes et à tous, à un moment ou à un autre, d’éprouver des problèmes d’ordre psychologique ou de vouloir mieux se comprendre... Il n’est pas toujours possible de trouver en soi ou dans son entourage les ressources nécessaires pour faire face à la situation qui nous pose problème.
+                    Il nous arrive à toutes et à tous, à un moment ou à un autre, d’éprouver des problèmes d’ordre psychologique ou de vouloir mieux (se) comprendre... Il n’est pas toujours possible de trouver en soi ou dans son entourage les ressources nécessaires pour faire face à la situation qui nous pose problème.
                 </p>
                 
                 <p>Ainsi, l'objectif d'une analyse est de pouvoir:</p>
