--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             <h3 style="color: white">Un espace de parole.</h3>
                             <p>à Rœschwoog</p>
                             <hr style="max-width: 5rem" />
-                            <p>Audrey Bauerlé<br/><br/>Psychanalyste • Éducatrice spécialisée DE</p>
+                            <p>Audrey Bauerlé<br/><br/>Psychanalyste • Superviseuse • Éducatrice spécialisée</p>
                             <a href="#contact"
                                 class="btn btn-appoint">Contact</a>
                         </div>
