--- a/index.html
+++ b/index.html
@@ -114,10 +114,11 @@
 
             <div class="intro-par">
                 <p>
-                    Ré-Unir est un espace neutre de parole destiné aux particuliers (entretien individuel), aux
-                    familles (entretiens familiaux) et aux professionnels issus des domaines social, médico-social,
-                    sanitaire, scolaire et du monde de l’entreprise (Analyse des pratiques professionnelles,
-                    supervision et régulation d’équipe). Ré-Unir propose également une activité innovante : la Psychamarche.
+                    Ré-Unir est un espace neutre de parole <a href="#contact">situé à Roeschwoog dans le Nord de l'Alsace (Pays Rhénan)</a> destiné 
+                    aux particuliers (entretien individuel), aux familles (entretiens familiaux) et aux professionnels 
+                    issus des domaines social, médico-social, sanitaire, scolaire et du monde de l’entreprise 
+                    (Analyse des pratiques professionnelles, supervision et régulation d’équipe). 
+                    Ré-Unir propose également une activité innovante : la Psychamarche.
                 </p>
             </div>
         </div>
@@ -483,7 +484,7 @@
                         <br/>
 
                         <b>Professionnels du social, medico social, sanitaire, scolaire :</b>
-                        <p>Chaque samedi de 14h à 17h30.</p>
+                        <p>Chaque samedi de 14h30 à 17h.</p>
                         <div style="display: flex; justify-content: space-between; align-content: left;" class="wrap-mobile">
                             <div style="display: table-cell; padding: 10px; margin: 5px; width: 100%; border: 1px solid rgb(170, 170, 170); background-color: rgb(230, 230, 230);">
                                 <p>
