--- a/index.html
+++ b/index.html
@@ -506,13 +506,13 @@
                                     <a href="https://goo.gl/maps/121r67dBtCKPdDh49" target="_blank">Forêt du Gros Chène <br/>à Haguenau</a>
                                 </p>
                             </div>
-                            <div style="display: table-cell; padding: 10px; margin: 5px; width: 100%; border: 1px solid rgb(170, 170, 170); background-color: rgb(230, 230, 230);">
+                            <!--<div style="display: table-cell; padding: 10px; margin: 5px; width: 100%; border: 1px solid rgb(170, 170, 170); background-color: rgb(230, 230, 230);">
                                 <p>
                                     <span>4ème samedi du mois :</span>
                                     <br/><br/>
                                     <a href="https://goo.gl/maps/5J9hCaicTqwza7ANA" target="_blank">Parc naturel de la Sauer Munschausen <br/>(région Lauterbourg-Wissembourg) <br/> <br/>(RDV au parking à droite du Centre d'initiation à la Nature)</a>
                                 </p>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </div>
