Adding "Psychamarche bénévole"

--- a/index.html
+++ b/index.html
@@ -471,7 +471,13 @@
                     </div>
 
                     <br/>
-                    <h5>Séances</h5>
+                    <h5 id="seances-psychamarche" style="padding-bottom: 10px;">Séances</h5>
+
+                    <div style="padding: 20px; width: 100%; padding-bottom: 10px; background-color: rgb(224, 240, 255); border-radius: 10px;">
+                        <p>Du <b>30 novembre au 1 décembre</b>, je vous propose <b>1 heure de psychamarche bénévole</b> chaque soirs et à distance (écouteurs) durant notre droit de sortie de 1km.</p>
+                        <p>Pour plus d'informations, vous pouvez consulter <a href="https://www.facebook.com/re.unirpro67/events" target="_blank">la page "Evènements" sur le mur Facebook de Ré-Unir</a>.</p>
+                        <p>À bientôt.</p>
+                    </div>
 
                     <div style="padding: 20px; padding-bottom: 0;">
                         <b>Particuliers :</b>
