Update message psychamarche

--- a/index.html
+++ b/index.html
@@ -473,10 +473,41 @@
                     <br/>
                     <h5 id="seances-psychamarche" style="padding-bottom: 10px;">Séances</h5>
 
-                    <div style="padding: 20px; width: 100%; padding-bottom: 10px; background-color: rgb(224, 240, 255); border-radius: 10px;">
-                        <p>Du <b>30 novembre au 1 décembre</b>, je vous propose <b>1 heure de psychamarche bénévole</b> chaque soirs et à distance (écouteurs) durant notre droit de sortie de 1km.</p>
+                    <div style="padding: 20px; width: 100%; padding-bottom: 10px; background-color: rgb(224, 240, 255); border-radius: 10px;" id="infos-compl-psychamarche">
+                        <p>Bonjour à toutes et tous,</p>
+
+                        <p>A compter du 1er janvier 2021, la participation aux Psychamarches nécessitera:</p>
+                        <ol>
+                            <li>Un certificat médical mentionnant l'autorisation de votre médecin traitant pour la pratique de la marche nordique, la marche en raquettes et/ou la randonnée pédestre.</li>
+                            <li>Une cotisation annuelle de 15 euros à la FSCF (Fédération Sportive et Culturelle de France) pour garantir notre sécurité en cas de pépin.</li>
+                            <li>Votre inscription et vos documents sont à faire parvenir :<br/>
+                                <div style="padding-left: 2.5rem;"><b>FSCF</b><br/>
+                                27, rue des Juifs
+                                67000 Strasbourg<br/>
+                                <a href="tel:+33388212982" target="_blank">03.88.21.29.82</a></div>
+                            </li>
+                            <li>Prévoyez d'investir dans vos vêtements de randonnée, chaussures adaptées, bâtons de marche nordique, raquettes, thermos, sac à dos. Tout est à usage personnel et privé (COVID oblige).</li>
+                            <li>
+                                Des idées randos, j'en ai plein...😉
+                                <br/>
+                                Certaines resteront régulières et habituelles sur 2h30.
+                                <br/>
+                                D'autres seront occasionnelles, à thèmes et sur la journée d'un dimanche (~1/trimestre)
+                                <br/>
+                                (voir dans le futur sur un week end...😊)
+                            </li>
+                            <li>Prendre soin de soi c'est aussi joindre le corps, l'esprit, la parole, la relaxation et la nature dans un moment de partage, de découverte et de rencontre.</li>
+                            <li>
+                                Ce projet est né et a été mis en place après le 1er confinement en juillet 2020.<br/>
+                                Et, chaque jour, il prend forme un peu plus grâce à vous ! Merci ! 
+                            </li>
+                            <li>Svp, réservez le dimanche 10. 01.2021 sur votre agenda pour notre journée: "Psychamarche du Nouvel an"! (événement à venir 😉) </li>
+                        </ol>
+
                         <p>Pour plus d'informations, vous pouvez consulter <a href="https://www.facebook.com/re.unirpro67/events" target="_blank">la page "Evènements" sur le mur Facebook de Ré-Unir</a>.</p>
-                        <p>À bientôt.</p>
+
+                        <p>À bientôt,</p>
+                        <p>Audrey Bauerlé 🍀</p>
                     </div>
 
                     <div style="padding: 20px; padding-bottom: 0;">
