--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
 
     <!-- Analytics Princelle -->
     <script type="text/javascript">
-        var _paq = window._paq || [];
+        var _paq = window._paq = window._paq || [];
         /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
         _paq.push(["setCookieDomain", "*.ré-unir.fr,https"]);
         _paq.push(['trackPageView']);
@@ -828,13 +828,13 @@
         (function() {
         var u="//analytics.princelle.org/";
         _paq.push(['setTrackerUrl', u+'matomo.php']);
-        _paq.push(['setSiteId', 'ré-unir.fr,https://xn--r-unir-bva.fr']);
+        _paq.push(['setSiteId', '5']);
         var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-        g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+        g.type='text/javascript'; g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
         })();
     </script>
-    <noscript><p><img src="//analytics.princelle.org/matomo.php?idsite=ré-unir.fr,https://xn--r-unir-bva.fr&amp;rec=1" style="border:0;" alt="" /></p></noscript>
-    <!-- End Matomo Code -->
+    <noscript><p><img src="//analytics.princelle.org/matomo.php?idsite=5&amp;rec=1" style="border:0;" alt="" /></p></noscript>
+  <!-- End Matomo Code -->
 
 </body>
 
