--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                             <p>Supervisée elle même, cette activité innovante n'est pas une promenade où l'on bavarde mais une activité sérieuse, structurée et un nouvel outil à visée thérapeutique.</p>
                         </div>
 
-                        <div style="padding: 20px; width: 100%; border-left: 2px solid rgb(170, 170, 170); background-color: rgb(236, 236, 236);">
+                        <!--<div style="padding: 20px; width: 100%; border-left: 2px solid rgb(170, 170, 170); background-color: rgb(236, 236, 236);">
                             <h5 style="margin-top:0;">Matériel</h5>
                             <ul id="materiel-psychamarche">
                                 <li>Tenue de sport (adaptée à la marche nordique),</li>
@@ -467,7 +467,7 @@
 
                             <br/>
                             <b>En raison des règles sanitaires actuelles, nous respecterons ensemble les 1,50m de distance entre chaque participants pendant l'activité.</b>
-                        </div>
+                        </div>-->
                     </div>
 
                     <br/>
@@ -501,16 +501,28 @@
                                 Ce projet est né et a été mis en place après le 1er confinement en juillet 2020.<br/>
                                 Et, chaque jour, il prend forme un peu plus grâce à vous ! Merci ! 
                             </li>
-                            <li>Svp, réservez le dimanche 10. 01.2021 sur votre agenda pour notre journée: "Psychamarche du Nouvel an"! (événement à venir 😉) </li>
                         </ol>
 
-                        <p>Pour plus d'informations, vous pouvez consulter <a href="https://www.facebook.com/re.unirpro67/events" target="_blank">la page "Evènements" sur le mur Facebook de Ré-Unir</a>.</p>
+                        <p><b>Important !</b> Pour plus d'informations sur les prochains évènements, vous pouvez consulter <a href="https://www.facebook.com/re.unirpro67/events" target="_blank">la page "Evènements" sur le mur Facebook de Ré-Unir</a>. Vous trouverez toutes les informations sur le lieu et le cadre des séances.</p>
 
                         <p>À bientôt,</p>
                         <p>Audrey Bauerlé 🍀</p>
                     </div>
 
                     <div style="padding: 20px; padding-bottom: 0;">
+                        <p>Les séances ont lieu :</p>
+                        <ul id="event-planning">
+                            <li>chaque 1er dimanche du mois sur une durée de 2h30 ou toute la journée,</li>
+                            <li>chaque samedis de 14h30 à 17h,</li>
+                            <li>chaque mercredi soir de 17h à 19h30 <b>(lorsque le couvre-feu sera levé)</b>.</li>
+                        </ul>
+                        <p>Pour en savoir plus sur les prochains évènments, vous pouvez consulter <a href="https://www.facebook.com/re.unirpro67/events" target="_blank">la page "Evènements" sur le mur Facebook de Ré-Unir</a>.</p>
+                        <p>Chaque évènement est orgaignisé et renseingné une semaine à l'avance sous la forme d'évènements.</p>
+                        
+
+                    </div>
+
+                    <!--<div style="padding: 20px; padding-bottom: 0;">
                         <b>Particuliers :</b>
                         <p>Les mercredis de 17h30 à 20h au <a href="https://goo.gl/maps/121r67dBtCKPdDh49" target="_blank">Gros Chêne de Haguenau</a> ou à Roeschwoog en période hivernale.</p>
                         <p>Plus d'informations sur les séances à venir sont disponibles sur <a href="https://www.facebook.com/re.unirpro67" target="_blank">la page Facebook de Ré-Unir</a>.</p>
@@ -552,7 +564,7 @@
                                 </p>
                             </div>-->
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </section>
     </section>
