--- a/index.html
+++ b/index.html
@@ -516,8 +516,8 @@
                             <li>chaque samedis de 14h30 à 17h,</li>
                             <li>chaque mercredi soir de 17h à 19h30 <b>(lorsque le couvre-feu sera levé)</b>.</li>
                         </ul>
-                        <p>Pour en savoir plus sur les prochains évènments, vous pouvez consulter <a href="https://www.facebook.com/re.unirpro67/events" target="_blank">la page "Evènements" sur le mur Facebook de Ré-Unir</a>.</p>
-                        <p>Chaque évènement est orgaignisé et renseingné une semaine à l'avance sous la forme d'évènements.</p>
+                        <p>Pour en savoir plus sur les prochains évènements, vous pouvez consulter <a href="https://www.facebook.com/re.unirpro67/events" target="_blank">la page "Evènements" sur le mur Facebook de Ré-Unir</a>.</p>
+                        <p>Chaque évènement est organisé et renseigné une semaine à l'avance sous la forme d'évènements.</p>
                         
 
                     </div>
