--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             <h3 style="color: white">Un espace de parole.</h3>
                             <p>à Rœschwoog</p>
                             <hr style="max-width: 5rem" />
-                            <p><b>Audrey Bauerlé</b><br/><br/>Psychanalyste<br/>Superviseuse<br/>Éducatrice spécialisée</p>
+                            <p><b>Audrey Bauerlé</b><br/><br/>Psychanalyste<br/>Membre FEDEPSY</p>
                             <a href="#contact"
                                 class="btn btn-appoint">Contact</a>
                         </div>
@@ -138,10 +138,7 @@
                 <p>Je suis une professionnelle dans l'accompagnement éducatif, pédagogique, scolaire et/ou thérapeutique depuis 1999.</p>
                 <p>J'ai démarré en qualité d'auxiliaire d'intégration scolaire pour ensuite poursuivre mon cursus professionnel en qualité d'éducatrice spécialisée Diplômée d'Etat, superviseuse certifiée Psychasoc et Psychanalyste.</p>
                 <p>Actuellement, je termine un Diplôme Universitaire en Médecine et je suis membre de la Fédération Européenne De Psychanalyse de Strasbourg (FEDEPSY).</p>
-                <p>Je suis salariée à 80 % dans une école spécialisée auprès d'adolescents de 12 à 18 ans en Allemagne et je termine un Brevet Fédéral en Marche Nordique.
-                <br/>
-                Ainsi, j'ai une longue expérience professionnelle auprès d'enfants (0-10), d'adolescents (10-21) et adultes en difficultés sociales, familiales, scolaires et/ou psychiques. </p>
-
+                <p>J'ai une longue expérience professionnelle auprès d'enfants (0-10), d'adolescents (10-21) et adultes en difficultés sociales, familiales, scolaires et/ou psychiques. </p>
                 <p>D'une nature passionnée et engagée, j'ai choisi de devenir une psychanalyste pour être au plus près de la parole et de ses effets. Étre là et tenter d'accompagner au mieux les singularités humaines. Je suis dialectophone et bilingue.</p>
                 <p>Dans un processus de formation continue, je cherche toujours à être au plus juste et à la page des problématiques actuelles. </p>
 
@@ -621,7 +618,7 @@
                     <p>Ré-Unir est un espace de parole destiné aux particuliers (entretien individuel), aux familles
                     (entretiens familiaux) et aux professionnels issus des domaines social, médico-social, sanitaire,
                     scolaire et du monde de l’entreprise (Analyse des pratiques professionnelles, supervision et
-                    régulation d’équipe). Je suis une psychanalyste, membre d'une Fédération, superviseuse certifiée et une éducatrice spécialisée D.E.</p>
+                    régulation d’équipe). Je suis une psychanalyste, membre de la FEDEPSY (Fédération Européenne de Psychanalyse et Ecole Psychanalytique de Strasbourg) et superviseuse certifiée.</p>
                     <p>Etant bilingue, j'ai choisi de m'installer à Roeschwoog, village proche de la frontière.</p>
                 </div>
                 <div class="col-md-2"></div>
