--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
         content="width=device-width, initial-scale=1">
     <title>Ré-Unir : un espace de parole.</title>
     <meta name="description"
-        content="Ré-Unir : un espace de parole. Psychanalyste à Roeschwoog.">
+        content="Ré-Unir : un espace de parole. Psychanalyste.">
 
     <!-- Cache -->
     <meta http-equiv="cache-control" content="must-revalidate, post-check=0, pre-check=0" />
     <meta http-equiv="cache-control" content="max-age=0" />
 
     <!-- SEO -->
-    <meta name="keywords" content="reunir,ré-unir,psychanalyse,psychanalyste,psy,roeschwoog,strasbourg,audrey bauerle,audrey,bauerle">
+    <meta name="keywords" content="reunir,ré-unir,re-unir,psychanalyse,psychanalyste,psy,roeschwoog,strasbourg,audrey bauerle,audrey,bauerle,lauterbourg,seltz,roeschwoog,soufflenheim,drusenheim,bischwiller,betschdorf,rastatt,baden baden">
 
     <!-- Leaflet -->
     <link rel="stylesheet"
